# LearningCpp20

./: .gitignore  README.md
Andreas_Fertig_CppCon2022/: Andreas_Fertig_CppCon2022.sln
Auto/: Auto.vcxproj  ReadMe.txt
Auto_and_decltype/: Auto.cpp  Auto.sln  Auto.vcxproj  Auto.vcxproj.filters
B_Public_A/: B_Public_A.sln
Basics_max2/: Basics_max2.cpp  Basics_max2.sln  Basics_max2.vcxproj  Basics_max2.vcxproj.filters
Casting/: Casting.sln
Class_A_B_Foo/: Class_A_B_Foo.sln
Const/: Consts.sln
Constructing/: Constructing.sln
Constructors/: Constructors.sln
Debugging/: StdLib_Test.cpp
Decorator-iglberger/: Decorator-iglberger.sln
Destructor_A_B/: Destructor_A_B.sln
DirectoryWritePermissions/: DirectoryWritePermissions.cpp  DirectoryWritePermissions.sln  DirectoryWritePermissions.vcxproj  DirectoryWritePermissions.vcxproj.filters
Es_cpp_Temp_Iglberger_Overloads/: Es_cpp_Temp_Iglberger_Overloads.cpp  Es_cpp_Temp_Iglberger_Overloads.sln  Es_cpp_Temp_Iglberger_Overloads.vcxproj  Es_cpp_Temp_Iglberger_Overloads.vcxproj.filters
Exceptions/: Stack.cpp
ExplicitKeyword/: ExplicitKeyword.sln
FedorPikus/PrivateInheritance/: CMakeLists.txt  PrivateInheritance.sln  PrivateInheritance.vcxproj  PrivateInheritance.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
GoogleTest/: Dll1.sln
Increment/: Increment.sln
Initialization/: Initialization.sln
InitializerListConstructor/: InitializerListConstructor.sln
Iterator_Vector_Back/: Iterator_Vector_Back.sln
Lambdas/: Lambdas.cpp  Lambdas.sln  Lambdas.vcxproj  (+1 more)
Lambdas2/: ReadMe.txt  (+4 more)
(+493 files in other folders)
